# minifb

./: CMakeLists.txt  cylinder.cpp  decomp.cpp  intersect.cpp  main.c  parametrised.cpp  vertex.cpp
